Changed return URL.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2","fallback":"true","orgId":"00D52000000JQzr","ts":""}'>
     <input type=hidden name="orgid" value="00D52000000JQzr">
-    <input type=hidden name="retURL" value="https://www.copyright.com/ric/">
+    <input type=hidden name="retURL" value="https://www.copyright.com/solutions-ringgold/">
 
     <input type=hidden name="recordType" id="recordType" value="01252000003bY32">
     <input type=hidden name="subject" id="subject" value="ID Request Webform">
