Update New Ringgold ID request on GITHUB - FULL (QA).html
Added case Type population.

--- a/New Ringgold ID request on GITHUB - FULL (QA).html
+++ b/New Ringgold ID request on GITHUB - FULL (QA).html
@@ -68,6 +68,7 @@
     <input type=hidden name="subject" id="subject" value="ID Request Webform">
     <input type=hidden name="description" id="description" value="A new request has been submitted.">
     <input type=hidden name="00N4Q00000AucPk" id="00N4Q00000AucPk" value="Web">
+    <input type=hidden name="Type" id="Type" value="Feature Request">
 
     <!--  ----------------------------------------------------------------------  -->
     <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
