--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 <title></title>
 </head>
 <body>
- <a href="./New Ringgold ID request CCC Partial (Dev).html">New Ringgold ID request to submit to CCCPartial (Dev)</a>
- <br/>
- <a href="./New Ringgold ID request on GITHUB - FULL (QA).html">New Ringgold ID request to submit to Full (QA)</a>
+  <strong>New Ringgold ID requests:</strong>
+  <br/>
+  <a href="./New Ringgold ID request CCC Partial (Dev).html">New Ringgold ID request to submit to CCCPartial (Dev)</a>
+  <br/>
+  <a href="./New Ringgold ID request on GITHUB - FULL (QA).html">New Ringgold ID request to submit to Full (QA)</a>
+  <br/>
+  <br/>
+  <strong>New Ringgold Login requests:</strong>
+  <br/>
+  <a href="./New Ringgold login request on GITHUB - CCC Partial (Dev).html">New Ringgold Login request to submit to CCCPartial (Dev)</a>
 </body>
 </html>
