--- a/New Ringgold login request on GITHUB - CCC Partial (Dev).html
+++ b/New Ringgold login request on GITHUB - CCC Partial (Dev).html
@@ -29,6 +29,7 @@
     <input type=hidden name="description" id="description" value="A new login request has been submitted.">
     <input type=hidden name="00N4Q00000AucPk" id="00N4Q00000AucPk" value="Web">
     <input type=hidden name="Type" id="Type" value="Feature Request">
+    <input type=hidden name="00N0c00000B8wtl" id="00N0c00000B8wtl" value="True">
 
     <!--  ----------------------------------------------------------------------  -->
     <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
