--- a/New Ringgold login request on GITHUB - CCC Partial (Dev).html
+++ b/New Ringgold login request on GITHUB - CCC Partial (Dev).html
@@ -15,14 +15,14 @@
 <!--  ----------------------------------------------------------------------  -->
 
 <p>
-    <strong> New Ringgold Login Request </strong>
+    <strong> New Ringgold Login Request to CCCPartial</strong>
 </p>
 
 <form action="https://copyright-clearance--cccpartial.sandbox.my.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
-    <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2","fallback":"true","orgId":"00D52000000JQzr","ts":""}'>
+    <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2_CCC","fallback":"true","orgId":"00D52000000JQzr","ts":""}'>
     <input type=hidden name="orgid" value="00D52000000JQzr">
-    <input type=hidden name="retURL" value="https://www.copyright.com/solutions-ringgold/">
+    <input type=hidden name="retURL" value="https://www.aws-p-pre.copyright.com/solutions-ringgold/id-request-received/">
 
     <input type=hidden name="recordType" id="recordType" value="01252000003bY32">
     <input type=hidden name="subject" id="subject" value="Login Request Webform">
@@ -49,7 +49,7 @@
 
         <tr>
             <td>Email:</td>
-            <td><input  id="email" maxlength="80" name="email" size="20" type="text" title="Requester email address" required/></td>
+            <td><input  id="email" maxlength="80" name="email" size="20" type="email" title="Requester email address" required/></td>
         </tr>
 
         <tr>
@@ -66,7 +66,7 @@
 
     <br/>
 
-    <div class="g-recaptcha" data-sitekey="6LdSuWEnAAAAAK1tkZutGKELDIPZirANkw1pBCP6"></div><br>
+    <div class="g-recaptcha" data-sitekey="6LcWVBoTAAAAAJqD8femennZJ8YGm62_6woZ1m_D"></div><br>
     <input type="submit" name="submit">
 
 </form>
