Update New Ringgold login request on GITHUB - CCC Partial (Dev).html
reCapture returned back to my own.

--- a/New Ringgold login request on GITHUB - CCC Partial (Dev).html
+++ b/New Ringgold login request on GITHUB - CCC Partial (Dev).html
@@ -20,7 +20,7 @@
 
 <form action="https://copyright-clearance--cccpartial.sandbox.my.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
-    <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2_CCC","fallback":"true","orgId":"00D52000000JQzr","ts":""}'>
+    <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2","fallback":"true","orgId":"00D52000000JQzr","ts":""}'>
     <input type=hidden name="orgid" value="00D52000000JQzr">
     <input type=hidden name="retURL" value="https://www.aws-p-pre.copyright.com/solutions-ringgold/id-request-received/">
 
@@ -66,7 +66,7 @@
 
     <br/>
 
-    <div class="g-recaptcha" data-sitekey="6LcWVBoTAAAAAJqD8femennZJ8YGm62_6woZ1m_D"></div><br>
+    <div class="g-recaptcha" data-sitekey="6LdSuWEnAAAAAK1tkZutGKELDIPZirANkw1pBCP6"></div><br>
     <input type="submit" name="submit">
 
 </form>
