--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <li>
       <a href="./New Ringgold ID request on GITHUB - FULL (QA).html">New Ringgold ID request to submit to Full (QA)</a>
     </li>
+    <li>
+      <a href="./New Ringgold ID request with CCC reCAPTHA - Prod.html">New Ringgold ID request to submit to Prod</a>
+    </li>
     <br/>
     <strong>New Ringgold Login requests:</strong>
     <br/>
