--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <li>
       <a href="./New Ringgold login request on GITHUB - FULL (QA).html">New Ringgold Login request to submit to FULL (QA)</a>
     </li>
+    <li>
+      <a href="./New Ringgold login request on GITHUB - Prod.html">New Ringgold Login request to submit to Prod</a>
+    </li>
   </ol>
 </body>
 </html>
