Update New Ringgold ID request CCC Partial (Dev).html
Fixed email usage.

--- a/New Ringgold ID request CCC Partial (Dev).html
+++ b/New Ringgold ID request CCC Partial (Dev).html
@@ -1,3 +1,4 @@
+
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: Please add the following <META> element to your page <HEAD>.      -->
 <!--  If necessary, please modify the charset parameter to specify the        -->
@@ -93,7 +94,7 @@
 
         <tr>
             <td>Your Email Address:</td>
-            <td><input id="00N5200000UdKDT" maxlength="100" name="00N5200000UdKDT" size="20" type="text" title="Requester email address" required/></td>
+            <td><input  id="email" maxlength="80" name="email" size="20" type="text" title="Requester email address" required/></td>
         </tr>
 
         <tr>
