--- a/New Ringgold login request on GITHUB - Prod.html
+++ b/New Ringgold login request on GITHUB - Prod.html
@@ -31,35 +31,26 @@
     <input type=hidden name="Type" id="Type" value="Feature Request">
     <input type=hidden name="00N0c00000B8wtl" id="00N0c00000B8wtl" value="True">
 
-    <!--  ----------------------------------------------------------------------  -->
-    <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
-    <!--  these lines if you wish to test in debug mode.                          -->
-    <!-- <input type="hidden" name="debug" value=1>                              -->
-    <!-- <input type="hidden" name="debugEmail"                                  -->
-    <!-- value="rprytkov@copyright.com">                                         -->
-    <!--  ----------------------------------------------------------------------  -->
-
-
     <table>
 
         <tr>
             <td>Full Name:</td>
-            <td><input id="00N5300000HViuh" maxlength="100" name="00N5300000HViuh" size="20" type="text" title="Requester name" required/></td>
+            <td><input id="00N4Q00000AzqtT" maxlength="100" name="00N4Q00000AzqtT" size="20" type="text" title="Requester name" required/></td>
         </tr>
 
         <tr>
             <td>Email:</td>
-            <td><input  id="email" maxlength="80" name="email" size="20" type="email" title="Requester email address" required/></td>
+            <td><input id="email" maxlength="80" name="email" size="20" type="email" title="Requester email address" required/></td>
         </tr>
 
         <tr>
             <td>Company:</td>
-            <td><input id="00N5300000HViuX" maxlength="100" name="00N5300000HViuX" size="20" type="text" required/></td>
+            <td><input id="00N4Q00000AzqtJ" maxlength="100" name="00N4Q00000AzqtJ" size="20" type="text" required/></td>
         </tr>
 
         <tr>
             <td>Title:</td>
-            <td><input id="00N5300000I1jW9" maxlength="50" name="00N5300000I1jW9" size="20" type="text" required/></td>
+            <td><input id="00N4Q00000Azqun" maxlength="50" name="00N4Q00000Azqun" size="20" type="text" required/></td>
         </tr>
 
     </table>
