--- a/index.html
+++ b/index.html
@@ -8,25 +8,7 @@
   <br/>
   <ol>
     <li>
-      <a href="./New Ringgold ID request CCC Partial (Dev).html">New Ringgold ID request to submit to CCCPartial (Dev)</a>
-    </li>
-    <li>
-      <a href="./New Ringgold ID request on GITHUB - FULL (QA).html">New Ringgold ID request to submit to Full (QA)</a>
-    </li>
-    <li>
-      <a href="./New Ringgold ID request with my reCAPTHA - Prod.html">New Ringgold ID request to submit to Prod</a>
-    </li>
-    <br/>
-    <strong>New Ringgold Login requests:</strong>
-    <br/>
-    <li>
-      <a href="./New Ringgold login request on GITHUB - CCC Partial (Dev).html">New Ringgold Login request to submit to CCCPartial (Dev)</a>
-    </li>
-    <li>
-      <a href="./New Ringgold login request on GITHUB - FULL (QA).html">New Ringgold Login request to submit to FULL (QA)</a>
-    </li>
-    <li>
-      <a href="./New Ringgold login request on GITHUB - Prod.html">New Ringgold Login request to submit to Prod</a>
+      <a href="./New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html">New Ringgold ID request to submit to CCCPartial (Dev)</a>
     </li>
   </ol>
 </body>
