--- a/New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html
+++ b/New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html
@@ -71,7 +71,7 @@
     <input type=hidden name="retURL" value="https://www.copyright.com/solutions-ringgold/">
 
     <input type=hidden name="recordType" id="recordType" value="01252000003bY32">
-    <input type=hidden name="subject" id="subject" value="ID Request for">
+    <input type=hidden name="subject" id="subject" value="ID Request Webform">
     <input type=hidden name="description" id="description" value="A new request has been submitted.">
     <input type=hidden name="00N4Q00000AucPk" id="00N4Q00000AucPk" value="Web">
     <input type=hidden name="Type" id="Type" value="Feature Request">
@@ -98,7 +98,7 @@
 
         <tr>
             <td>Your Email Address:</td>
-            <td><input id="00N5200000UdKDT" maxlength="100" name="00N5200000UdKDT" size="20" type="text" title="Requester email address" required/></td>
+            <td><input id="email" maxlength="80" name="email" size="20" type="email" title="Requester email address" required/></td>
         </tr>
 
         <tr>
