--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <li>
       <a href="./New Ringgold ID request with my reCAPTHA - FULL (QA).html">New Ringgold ID request to submit to FULL (QA)</a>
     </li>
+    <li>
+      <a href="./New Ringgold login request on GITHUB - CCC Partial (Dev).html">New Ringgold loginrequest to submit to CCCPartial (Dev)</a>
+    </li>
   </ol>
 </body>
 </html>
