--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <li>
       <a href="./New Ringgold login request on GITHUB - FULL (QA).html">New Ringgold loginrequest to submit to FULL (QA)</a>
     </li>
+      <li>
+      <a href="./Partial-Licensee_Support.html">Partial Licensee Support Messaging Chat</a>
+    </li>  
   </ol>
 </body>
 </html>
