--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </li>
     <li>
       <a href="./Partial-Licensee_Support.html">Partial Licensee Support Messaging Chat</a>
+    </li>
+    <li>
+      <a href="./Amazon-Licensee_Support.html">Amazon Licensee Support Messaging Chat</a>
     </li>  
   </ol>
 </body>
