--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title></title>
 </head>
 <body>
+  
   <strong>New Ringgold ID requests:</strong>
   <br/>
   <ol>
@@ -18,13 +19,16 @@
     </li>
     <li>
       <a href="./New Ringgold login request on GITHUB - FULL (QA).html">New Ringgold loginrequest to submit to FULL (QA)</a>
-    </li>
-    <li>
-      <a href="./Partial-Licensee_Support.html">Partial Licensee Support Messaging Chat</a>
-    </li>
-    <li>
-      <a href="./Amazon-Licensee_Support.html">Amazon Licensee Support Messaging Chat</a>
     </li>  
   </ol>
+  
+  <strong>Test live chats on CCCPartial:</strong>
+  <br/>
+  <ol>
+    <li>
+      <a href="./Partial-Marketplace_Support_Button.html">Partial Market Support Chat</a>
+    </li>
+  </ol>
+  
 </body>
 </html>
