--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <br/>
   <ol>
     <li>
-      <a href="./Partial-Marketplace_Support_Button.html">Partial Market Support Chat</a>
+      <a href="./Partial-Marketplace_Support_Button.html">Market Support Chat on CCCPartial</a>
     </li>
   </ol>
   
