--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <li>
       <a href="./Partial-Marketplace_Support_Button.html">Market Support Chat on CCCPartial</a>
     </li>
+    <li>
+      <a href="./Partial-Rightsfind_Enterprise_Support_Button.html">RFE Support Chat on CCCPartial</a>
+    </li>
+    <li>
+      <a href="./Partial-RLSC_Support_Button.html">RLSC Support Chat on CCCPartial</a>
+    </li>    
   </ol>
   
 </body>
