--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
       <a href="./Partial-RLSC_Support_Button.html">RLSC Support Chat on CCCPartial</a>
     </li>    
   </ol>
+
+  <strong>Test live chats on FULL:</strong>
+  <br/>
+  <ol>
+    
+    <li>
+      <a href="./Full-Licensee_Support_Button.html">Licensee Support Chat on FULL</a>
+    </li>
+    <li>
+      <a href="./Full-New_Transactional_Support_Button.html">New Transactional Support Chat on FULL</a>
+    </li>
+    <li>
+      <a href="./Full-RFPro_Advisor_Chat_Button.html">RFPro Advisor Support Chat on FULL</a>
+    </li>
+    <li>
+      <a href="./Full-Rightsfind_Enterprise_Support_Button.html">Rightsfind Enterprise Support Chat on FULL</a>
+    </li>
+    <li>
+      <a href="./Full-Rightsholder_Support_Button.html">Rightsholder Support Chat on FULL</a>
+    </li>
+    <li>
+      <a href="./Full-Rightslink_Author_Support_Button.html">Rightslink Author Support Chat on FULL</a>
+    </li>
+    <li>
+      <a href="./RLSC_Support_Button.html">RLSC Support Chat on FULL</a>
+    </li>
+   
+  </ol>
   
 </body>
 </html>
