--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <br/>
   <ol>
     <li>
-      <a href="./Partial-Marketplace_Support_Button.html">Market Support Chat on CCCPartial</a>
+      <a href="./Partial-Licensee_Chat_Button.html">Licensee Chat Button on CCCPartial</a>
     </li>
     <li>
       <a href="./Partial-Rightsfind_Enterprise_Support_Button.html">RFE Support Chat on CCCPartial</a>
