--- a/Partial-Licensee_Chat_Button.html
+++ b/Partial-Licensee_Chat_Button.html
@@ -1,7 +1,7 @@
 <html>
 
 <textarea cols="60" name="text" rows="3">
-        'Marketplace Support' page - placeholder...
+        'Licensee Chat Button' page - placeholder...
     </textarea>
 
 <img id="liveagent_button_online_5730c0000004aOv"
