Update and rename Partial-RLSC_Support_Button.html to Partial-RLSC_Chat_Button.html
Renamed.

--- a/Partial-RLSC_Chat_Button.html
+++ b/Partial-RLSC_Chat_Button.html
@@ -1,6 +1,6 @@
 <html>
 <textarea name="text" cols="60" rows="3">
-        'RLSC Support' page - placeholder...
+        'RLSC Chat Button' page - placeholder...
     </textarea>
 
 <img id="liveagent_button_online_5730c0000004aPA" style="display: none; border: 0px none; cursor: pointer"
