--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="./Partial-Rightsfind_Enterprise_Support_Button.html">RFE Support Chat on CCCPartial</a>
     </li>
     <li>
-      <a href="./Partial-RLSC_Support_Button.html">RLSC Support Chat on CCCPartial</a>
+      <a href="./Partial-RLSC_Chat_Button.html">RLSC Chat Button on CCCPartial</a>
     </li>    
   </ol>
 
