Update and rename Partial-Rightsfind_Enterprise_Support_Button.html to Partial-Rightsfind_Enterprise_Chat_Button.html
Renamed.

--- a/Partial-Rightsfind_Enterprise_Chat_Button.html
+++ b/Partial-Rightsfind_Enterprise_Chat_Button.html
@@ -1,6 +1,6 @@
 <html>
 <textarea name="text" cols="60" rows="3">
-        'Rightsfind Enterprise Support' page - placeholder...
+        'Rightsfind Enterprise Chat Button' page - placeholder...
     </textarea>
 
 <img id="liveagent_button_online_5730c0000004aP0" style="display: none; border: 0px none; cursor: pointer"
