--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="./Partial-Licensee_Chat_Button.html">Licensee Chat Button on CCCPartial</a>
     </li>
     <li>
-      <a href="./Partial-Rightsfind_Enterprise_Support_Button.html">RFE Support Chat on CCCPartial</a>
+      <a href="./Partial-Rightsfind_Enterprise_Chat_Button.html">Rightsfind Chat Button on CCCPartial</a>
     </li>
     <li>
       <a href="./Partial-RLSC_Chat_Button.html">RLSC Chat Button on CCCPartial</a>
