--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <br/>
   <ol>
     <li>
-      <a href="./Partial-Licensee_Chat_Button.html">Licensee Chat Button on CCCPartial</a>
+      <a href="./Partial-Licensee_Chat_Button.html">Licensee Chat Button on CCCPartial (&apos;Chat Permissions&apos; Skill)</a>
     </li>
     <li>
-      <a href="./Partial-Rightsfind_Enterprise_Chat_Button.html">Rightsfind Chat Button on CCCPartial</a>
+      <a href="./Partial-Rightsfind_Enterprise_Chat_Button.html">Rightsfind Chat Button on CCCPartial (&apos;Chat RightFind&apos; Skill)</a>
     </li>
     <li>
-      <a href="./Partial-RLSC_Chat_Button.html">RLSC Chat Button on CCCPartial</a>
+      <a href="./Partial-RLSC_Chat_Button.html">RLSC Chat Button on CCCPartial (&apos;Chat RLSC&apos; Skill)</a>
     </li>    
   </ol>
 
