--- a/index.html
+++ b/index.html
@@ -41,25 +41,22 @@
   <ol>
     
     <li>
-      <a href="./Full-Licensee_Support_Button.html">Licensee Support Chat on FULL</a>
+      <a href="./Full-Licensee_Support_Button.html">Licensee Chat Button on FULL (&apos;Chat Permissions&apos; Skill)</a>
     </li>
     <li>
-      <a href="./Full-New_Transactional_Support_Button.html">New Transactional Support Chat on FULL</a>
+      <a href="./Full-RFPro_Advisor_Chat_Button.html">RFPro Advisor Chat Button on FULL (&apos;Chat RightFind&apos; Skill)</a>
     </li>
     <li>
-      <a href="./Full-RFPro_Advisor_Chat_Button.html">RFPro Advisor Support Chat on FULL</a>
+      <a href="./Full-Rightsfind_Enterprise_Support_Button.html">Rightsfind Enterprise Chat Button on FULL (&apos;Chat RightFind&apos; Skill)</a>
     </li>
     <li>
-      <a href="./Full-Rightsfind_Enterprise_Support_Button.html">Rightsfind Enterprise Support Chat on FULL</a>
+      <a href="./Full-Rightsholder_Support_Button.html">Rightsholder Chat Button on FULL (&apos;Chat RightFind&apos; Skill)</a>
     </li>
     <li>
-      <a href="./Full-Rightsholder_Support_Button.html">Rightsholder Support Chat on FULL</a>
+      <a href="./Full-Rightslink_Author_Support_Button.html">Rightslink Author Chat Button on FULL (&apos;Chat RLSC&apos; Skill)</a>
     </li>
     <li>
-      <a href="./Full-Rightslink_Author_Support_Button.html">Rightslink Author Support Chat on FULL</a>
-    </li>
-    <li>
-      <a href="./RLSC_Support_Button.html">RLSC Support Chat on FULL</a>
+      <a href="./RLSC_Support_Button.html">RLSC Chat Button on FULL (&apos;Chat RLSC&apos; Skill)</a>
     </li>
    
   </ol>
