--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <br/>
   <ol>
     <li>
-      <a href="./Partial-Licensee_Chat_Button.html">Licensee Chat Button on CCCPartial (&apos;Chat Permissions&apos; Skill)</a>
+      <a href="./Partial-Licensee_Chat_Button.html">Licensee Chat Button on CCCPartial (<b>Chat Permissions</b> Skill)</a>
     </li>
     <li>
-      <a href="./Partial-Rightsfind_Enterprise_Chat_Button.html">Rightsfind Chat Button on CCCPartial (&apos;Chat RightFind&apos; Skill)</a>
+      <a href="./Partial-Rightsfind_Enterprise_Chat_Button.html">Rightsfind Chat Button on CCCPartial (<b>Chat RightFind</b> Skill)</a>
     </li>
     <li>
-      <a href="./Partial-RLSC_Chat_Button.html">RLSC Chat Button on CCCPartial (&apos;Chat RLSC&apos; Skill)</a>
+      <a href="./Partial-RLSC_Chat_Button.html">RLSC Chat Button on CCCPartial (<b>Chat RLSC</b> Skill)</a>
     </li>    
   </ol>
 
@@ -41,22 +41,22 @@
   <ol>
     
     <li>
-      <a href="./Full-Licensee_Support_Button.html">Licensee Chat Button on FULL (&apos;Chat Permissions&apos; Skill)</a>
+      <a href="./Full-Licensee_Support_Button.html">Licensee Chat Button on FULL (<b>Chat Permissions</b> Skill)</a>
     </li>
     <li>
-      <a href="./Full-RFPro_Advisor_Chat_Button.html">RFPro Advisor Chat Button on FULL (&apos;Chat RightFind&apos; Skill)</a>
+      <a href="./Full-RFPro_Advisor_Chat_Button.html">RFPro Advisor Chat Button on FULL (<b>Chat RightFind</b> Skill)</a>
     </li>
     <li>
-      <a href="./Full-Rightsfind_Enterprise_Support_Button.html">Rightsfind Enterprise Chat Button on FULL (&apos;Chat RightFind&apos; Skill)</a>
+      <a href="./Full-Rightsfind_Enterprise_Support_Button.html">Rightsfind Enterprise Chat Button on FULL (<b>Chat RightFind</b> Skill)</a>
     </li>
     <li>
-      <a href="./Full-Rightsholder_Support_Button.html">Rightsholder Chat Button on FULL (&apos;Chat RightFind&apos; Skill)</a>
+      <a href="./Full-Rightsholder_Support_Button.html">Rightsholder Chat Button on FULL (<b>Chat RightFind</b> Skill)</a>
     </li>
     <li>
-      <a href="./Full-Rightslink_Author_Support_Button.html">Rightslink Author Chat Button on FULL (&apos;Chat RLSC&apos; Skill)</a>
+      <a href="./Full-Rightslink_Author_Support_Button.html">Rightslink Author Chat Button on FULL (<b>Chat RLSC</b> Skill)</a>
     </li>
     <li>
-      <a href="./RLSC_Support_Button.html">RLSC Chat Button on FULL (&apos;Chat RLSC&apos; Skill)</a>
+      <a href="./RLSC_Support_Button.html">RLSC Chat Button on FULL (<b>Chat RLSC</b> Skill)</a>
     </li>
    
   </ol>
