--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a href="./Full-Rightslink_Author_Support_Button.html">Rightslink Author Chat Button on FULL (<b>Chat RLSC</b> Skill)</a>
     </li>
     <li>
-      <a href="https://mikita-hrutsa.github.io/">RLSC Chat Bot on FULL (Bot is always online, live agent requires <b>Chat RLSC</b> Skill)</a>
+      <a href="./ChatBotPage.html">RLSC Chat Bot on FULL (Bot is always online, live agent requires <b>Chat RLSC</b> Skill)</a>
     </li>
    
   </ol>
