--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a href="./Full-Rightsfind_Enterprise_Support_Button.html">Rightsfind Enterprise Chat Button on FULL (<b>Chat RightFind</b> Skill)</a>
     </li>
     <li>
-      <a href="./Full-Rightsholder_Support_Button.html">Rightsholder Chat Button on FULL (<b>Chat RightFind</b> Skill)</a>
+      <a href="./Full-Rightsholder_Support_Button.html">Rightsholder Chat Button on FULL (<b>Chat Rightsholder</b> Skill)</a>
     </li>
     <li>
       <a href="./Full-Rightslink_Author_Support_Button.html">Rightslink Author Chat Button on FULL (<b>Chat RLSC</b> Skill)</a>
