Update New Ringgold ID request with my reCAPTHA - FULL (QA).html
Return URL changed from the obsolete to the some existing page

--- a/New Ringgold ID request with my reCAPTHA - FULL (QA).html
+++ b/New Ringgold ID request with my reCAPTHA - FULL (QA).html
@@ -67,7 +67,7 @@
 
     <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2","fallback":"true","orgId":"00DDP0000060kTH","ts":""}'>
     <input type=hidden name="orgid" value="00DDP0000060kTH">
-    <input type=hidden name="retURL" value="https://www.aws-p-pre.copyright.com/solutions-ringgold/id-request-received/">
+    <input type=hidden name="retURL" value="https://copyright-clearance--full.sandbox.lightning.force.com/lightning/page/home/">
 
     <input type=hidden name="recordType" id="recordType" value="0124Q000001hjDe">
     <input type=hidden name="subject" id="subject" value="ID Request Webform">
