Update New Ringgold ID request with my reCAPTHA - FULL (QA).html
Changed data taken from Prod, because FULL was refreshed.

--- a/New Ringgold ID request with my reCAPTHA - FULL (QA).html
+++ b/New Ringgold ID request with my reCAPTHA - FULL (QA).html
@@ -65,8 +65,8 @@
 
 <form action="https://copyright-clearance--full.sandbox.my.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
-    <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2","fallback":"true","orgId":"00DDP0000060kTH","ts":""}'>
-    <input type=hidden name="orgid" value="00DDP0000060kTH">
+    <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2","fallback":"true","orgId":"00DVA000001anT3","ts":""}'>
+    <input type=hidden name="orgid" value="00DVA000001anT3">
     <input type=hidden name="retURL" value="https://copyright-clearance--full.sandbox.lightning.force.com/lightning/page/home/">
 
     <input type=hidden name="recordType" id="recordType" value="0124Q000001hjDe">
@@ -79,10 +79,11 @@
     <!--  ----------------------------------------------------------------------  -->
     <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
     <!--  these lines if you wish to test in debug mode.                          -->
-    <!--  <input type="hidden" name="debug" value=1>                              -->
-    <!--  <input type="hidden" name="debugEmail"                                  -->
-    <!--  value="rprytkov@copyright.com">                                         -->
+    <!-- <input type="hidden" name="debug" value=1>                              -->
+    <!-- <input type="hidden" name="debugEmail"                                  -->
+    <!-- value="rprytkov@copyright.com">                                         -->
     <!--  ----------------------------------------------------------------------  -->
+
 
     <table>
 
@@ -101,13 +102,8 @@
         </tr>
 
         <tr>
-            <td>First Name:</td>
-            <td><input id="00NDP00000GQWRm" maxlength="100" name="00NDP00000GQWRm" size="20" type="text" title="Requester first name" required/></td>
-        </tr>
-
-        <tr>
-            <td>Last Name:</td>
-            <td><input id="00NDP00000GQWRn" maxlength="100" name="00NDP00000GQWRn" size="20" type="text" title="Requester last name" required/></td>
+            <td>Your Full Name:</td>
+            <td><input id="00N4Q00000AzqtT" maxlength="100" name="00N4Q00000AzqtT" size="20" type="text" title="Requester name" required/></td>
         </tr>
 
         <tr>
@@ -377,11 +373,6 @@
         <tr>
             <td>Organization Postal Address:</td>
             <td><input id="00N4Q00000AzqtM" maxlength="50" name="00N4Q00000AzqtM" size="20" type="text" required/></td>
-        </tr>
-
-        <tr>
-            <td>Organization City:</td>
-            <td><input id="00NRu000001DvhR" maxlength="50" name="00NRu000001DvhR" size="20" type="text" required/></td>
         </tr>
 
         <tr>
