Update New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html

--- a/New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html
+++ b/New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html
@@ -391,6 +391,15 @@
         </tr>
 
         <tr>
+            <td>For-Profit or Non-Profit?:</td>
+            <td><select id="00NWr000001Nfmf" name="00NWr000001Nfmf" required>
+                <option value="For Profit">For Profit</option>
+                <option value="Non-Profit">Non-Profit</option>
+            </select>
+            </td>
+        </tr>
+
+        <tr>
             <td>Organization Official Website URL:</td>
             <td><input id="00N5200000UdO2y" maxlength="50" name="00N5200000UdO2y" size="20" type="text" required/></td>
         </tr>
