Update New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html

--- a/New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html
+++ b/New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html
@@ -393,6 +393,7 @@
         <tr>
             <td>For-Profit or Non-Profit?:</td>
             <td><select id="00NWr000001Nfmf" name="00NWr000001Nfmf" required>
+                <option value="">--None--</option>
                 <option value="For Profit">For Profit</option>
                 <option value="Non-Profit">Non-Profit</option>
             </select>
