Update New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html
Added new value

--- a/New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html
+++ b/New Ringgold ID request with my reCAPTHA - CCC Partial (Dev).html
@@ -416,6 +416,7 @@
                     <option value="Aries">Aries</option>
                     <option value="Benchpress">Benchpress</option>
                     <option value="eJournalPress">eJournalPress</option>
+                    <option value="RightsLink Author">RightsLink Author</option>
                     <option value="ScholarOne">ScholarOne</option>
                     <option value="Scholastica">Scholastica</option>
                     <option value="Not Applicable">Not Applicable</option>
